# darkstar

./: CMakeLists.txt
include/dark/: CMakeLists.txt  dark_test.h  darkinfo.h  darkstar.h  darktest.h  info.h  test.h  windows.h
include/dark/algorithm/: CMakeLists.txt  algorithm.h  find.h  sort.h
include/dark/char/: CMakeLists.txt  alphabet.h  cbuffer.h  cbuffer_view.h  char.h  cstring.h  digit.h  string.h  string_struct.h
include/dark/container/: CMakeLists.txt  array.h  array_iterator.h  box.h  container.h  container_data.h  container_error.h  darray.h  foreach.h  growth.h  linear_map.h  linear_map_struct.h  linear_queue.h  linear_queue_struct.h  queue.h  queue_struct.h  ref_data.h  shared_ref.h  vector.h  vector_struct.h  weak_ref.h
include/dark/core/: CMakeLists.txt  assert.h  configuration.h  core.h  data.h  enviroment.h  error.h  essential.h  instruction.h  library.h  macro.h  mem.h  message.h  module.h  so.h  sprint.h  std.h  terminate.h  test.h  unimplemented.h  unit.h  util.h  version.h
include/dark/debug/: CMakeLists.txt  debug.h  debug_memory.h  debug_print.h
include/dark/display/: CMakeLists.txt  display.h  monitor_handler.h  monitor_handler_struct.h  window.h  window_struct.h
include/dark/event/: CMakeLists.txt  event.h  event_data.h  event_handler.h  event_handler_struct.h
include/dark/geometry/: CMakeLists.txt  geometry.h  mat_3f.h  vec_2f.h  vec_3f.h
include/dark/hash/: CMakeLists.txt  djb2.h  fnv1.h  hash.h  hash_data.h  murmur2.h  murmur3.h  superfast.h
include/dark/log/: CMakeLists.txt  log.h  log_data.h  log_message.h  logger.h  logger_struct.h  static_log.h
include/dark/math/: CMakeLists.txt  abs.h  add.h  cast.h  com.h  constant.h  dmath.h  fmath.h  log.h  math.h  max.h  min.h  mult.h  (+5 more)
source/: CMakeLists.txt  dark_library.h  darktest.c  test.c
source/algorithm/: CMakeLists.txt  algorithm_module.h  find.c  sort.c
source/char/: .char_module.h.kate-swp  CMakeLists.txt  cbuffer.c  cbuffer_view.c  char_module.h  cstring.c  digit.c  string.c
source/container/: CMakeLists.txt  array.c  array_iterator.c  box.c  compare.c  container_helper.h  container_module.h  darray.c  growth.c  iterator.c  linear_map.c  linear_queue.c  linear_queue_helper.c  linear_queue_helper.h  queue.c  ref_helper.h  shared_ref.c  vector.c  weak_ref.c
source/core/: CMakeLists.txt  assert.c  core_helper.c  core_helper.h  core_module.h  enviroment.c  error.c  instruction.c  mem.c  message.c  so.c  sprint.c  terminate.c  test.c  version.c
source/debug/: CMakeLists.txt  allocation_override.h  debug_helper.c  debug_helper.h  debug_memory.c  debug_module.h  debug_print.c
source/display/: CMakeLists.txt  display_module.h  monitor_handler.c  window.c
source/event/: CMakeLists.txt  event_handler.c  event_module.h
source/geometry/: CMakeLists.txt  geometry_module.h  mat3_f.c  vec2_f.c  vec3_f.c
source/hash/: CMakeLists.txt  djb2.c  fnv1.c  hash_module.h  murmur2.c  murmur3.c  superfast.c
source/log/: CMakeLists.txt  log_helper.c  log_helper.h  log_module.h  logger.c  logger_helper.c  logger_helper.h  static_log.c
source/math/: CMakeLists.txt  abs.c  add.c  cast.c  com.c  dmath.c  fmath.c  log.c  math_module.h  max.c  min.c  mult.c  pow.c  range.c  sat_add.c  sat_cast.c  sat_mult.c
source/memory/: CMakeLists.txt  allocator.c  allocator_override.h  memory_debug.c  memory_debug_helper.c  memory_debug_helper.h  memory_module.h  os_allocator.c  os_allocator_helper.c  os_allocator_helper.h
source/order/: CMakeLists.txt  compare.c  find.c  order_module.h  sort.c
source/platform/: .console.c.kate-swp  .mutex.c.kate-swp  .process.c.kate-swp  CMakeLists.txt  clock.c  console.c  file.c  file_helper.c  file_helper.h  mutex.c  oserror.c  platform_module.h  process.c  thread.c
source/profile/: CMakeLists.txt  allocation_override.h  memory_profiler.c  profile_module.h
source/random/: CMakeLists.txt  entropy.c  prng.c  random_module.h  splitmix.c  uuid4.c
source/stream/: CMakeLists.txt  ostream.c  stream_module.h
source/surface/: CMakeLists.txt  event_handler.c  surface_module.h  window.c  window_callback.c  window_callback.h  window_helper.c  window_helper.h
source/time/: CMakeLists.txt  duration.c  stamp.c  stopwatch.c  time_module.h
source/tool/: CMakeLists.txt  array.c  array_helper.c  array_helper.h  array_iterator.c  array_iterator_helper.c  array_iterator_helper.h  array_view.c  array_view_helper.c  array_view_helper.h  buffer.c  buffer_view.c  compare.c  growth.c  iterator.c  tool_module.h
test/: CMakeLists.txt  test_test.c
test/algorithm/: CMakeLists.txt  find_test.c  sort_test.c
test/char/: CMakeLists.txt  cbuffer_test.c  cbuffer_view_test.c  char_test.c  cstring_test.c  digit_test.c  string_test.c
test/container/: CMakeLists.txt  array_iterator_test.c  array_test.c  box_test.c  container_test.c  darray_test.c  growth_test.c  linear_map_test.c  linear_queue_test.c  queue_test.c  shared_ref_test.c  vector_test.c  weak_ref_test.c
test/core/: CMakeLists.txt  core_test.c
test/debug/: CMakeLists.txt  debug_test.c
test/geometry/: CMakeLists.txt  mat_3f_test.c  vec_2f_test.c  vec_3f_test.c
test/hash/: CMakeLists.txt  hash_test.c
test/log/: CMakeLists.txt  log_test.c  logger_test.c  static_log_test.c
test/math/: CMakeLists.txt  abs_test.c  add_test.c  cast_test.c  com_test.c  dmath_test.c  fmath_test.c  log_test.c  max_test.c  min_test.c  mult_test.c  pow_test.c  range_test.c  sat_add_test.c  sat_cast_test.c  sat_mult_test.c
test/memory/: CMakeLists.txt  memory_debug_test.c  memory_test.c  os_allocator_test.c
test/order/: CMakeLists.txt  compare_test.c  find_test.c  sort_test.c
test/platform/: CMakeLists.txt  file_test.c  mutex_test.c  platform_test.c  thread_test.c
test/profile/: CMakeLists.txt  memory_profiler_test.c
test/random/: CMakeLists.txt  random_test.c
test/stream/: CMakeLists.txt  ostream_test.c  stream_test.c
test/time/: CMakeLists.txt  time_test.c
test/tool/: CMakeLists.txt  array_iterator_test.c  array_test.c  array_view_test.c  buffer_test.c  buffer_view_test.c  compare_test.c  container_test.c  growth_test.c
(+70 files in other folders)
