target_sources(
    darkstar
    PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/darkstar.h
    ${CMAKE_CURRENT_LIST_DIR}/test.h
)

#add_subdirectory(char)
add_subdirectory(container)
add_subdirectory(core)
add_subdirectory(debug)
#add_subdirectory(hash)
#add_subdirectory(log)
add_subdirectory(math)
add_subdirectory(memory)
add_subdirectory(order)
#add_subdirectory(platform)
#add_subdirectory(random)
#add_subdirectory(stream)
#add_subdirectory(time)
